fix:center align h1 heading

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -38,3 +38,8 @@ input {
     color: $state-danger-text;
   }
 }
+
+h1 {
+  text-align: center;
+  margin-top: 30px;
+}
